feat: Implement CSV attachment generation in email reports and enhance email sending functionality feat: Update anomaly detection logic to focus on frequency and rarity instead of complex models chore: Refactor .gitignore to include 'output/' directory for generated files fix: Correct email subject formatting and ensure proper handling of project-specific insights

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ __pycache__/
 # A pasta 'outputs' contém relatórios e gráficos gerados em cada execução.
 # O código-fonte deve ser capaz de gerá-los novamente.
 outputs/
+output/
 
 # 5. Logs
 # Arquivos de log são específicos de cada execução e não devem ser versionados.
